[fabric] Update add_peer and add_orderer to 2.5.4 (#2431)
Primary Changes
--------------
1.add_peer updated for version 2.5.4
2.add_orderer updated for version 2.5.4

Modifications
-----------------------
platforms/hyperledger-fabric/charts/fabric-orderernode
platforms/hyperledger-fabric/charts/fabric-osnadmin-channel-create
platforms/hyperledger-fabric/configuration/add-orderer.yaml
platforms/hyperledger-fabric/configuration/add-peer.yaml
platforms/hyperledger-fabric/configuration/roles/create/new_orderer/create_appchannel_block/templates/update_channel_script.tpl
platforms/hyperledger-fabric/configuration/roles/create/orderers/tasks/main.yaml
platforms/hyperledger-fabric/configuration/roles/create/osnchannels/tasks/valuefile.yaml
platforms/hyperledger-fabric/configuration/roles/create/peers/tasks/main.yaml
platforms/hyperledger-fabric/configuration/roles/create/peers/tasks/nested_main.yaml
platforms/hyperledger-fabric/configuration/roles/helm_component/templates/orderernode.tpl
platforms/hyperledger-fabric/configuration/roles/helm_component/templates/osn_create_channel_job.tpl

fixes #2430

Signed-off-by: mgCepeda <marina.gomez.cepeda@accenture.com>

--- a/platforms/hyperledger-fabric/configuration/roles/create/peers/tasks/main.yaml
+++ b/platforms/hyperledger-fabric/configuration/roles/create/peers/tasks/main.yaml
@@ -44,7 +44,7 @@
   tags:
     - notest
 
-# Wait for the Orderer HelmRelease
+# Wait for the peer HelmRelease
 - name: 'Wait for {{ peer.name }} HelmRelease in {{ namespace }}'
   k8s_info:
     api_version: "helm.toolkit.fluxcd.io/v2beta1"
