--- a/platforms/shared/charts/letsencrypt-cert/Chart.yaml
+++ b/platforms/shared/charts/letsencrypt-cert/Chart.yaml
@@ -4,7 +4,7 @@
 #  SPDX-License-Identifier: Apache-2.0
 ##############################################################################################
 apiVersion: v2
-name: leteencrypt-cert
+name: letsencrypt-cert
 description: A Helm chart for creating TLS certificates using letencrypt CA
 
 # A chart can be either an 'application' or a 'library' chart.
