update shared charts descriptions
Signed-off-by: Suvajit Sarkar <55580532+suvajit-sarkar@users.noreply.github.com>

--- a/platforms/shared/charts/bevel-scripts/Chart.yaml
+++ b/platforms/shared/charts/bevel-scripts/Chart.yaml
@@ -3,8 +3,9 @@
 #
 #  SPDX-License-Identifier: Apache-2.0
 ##############################################################################################
+
 apiVersion: v2
 name: bevel-scripts
-description: "Shared: Create configmaps of scripts used in Bevel"
+description: "Shared: Create configmaps of scripts used in Bevel helm charts"
 version: '0.15.0'
 appVersion: "1.16.0"
