--- a/platforms/shared/charts/bevel-storageclass-chart/Chart.yaml
+++ b/platforms/shared/charts/bevel-storageclass-chart/Chart.yaml
@@ -6,6 +6,6 @@
 
 apiVersion: v1
 appVersion: "2.0"
-description: "Shared: Deploys a StorageClass that can be used to provision persistent volumes for nodes."
+description: "Shared: Deploys a StorageClass that can be used to provision persistent volumes for nodes"
 name: bevel-storageclass
 version: '0.15.0'
