--- a/platforms/shared/charts/bevel-vault-mgmt/Chart.yaml
+++ b/platforms/shared/charts/bevel-vault-mgmt/Chart.yaml
@@ -6,6 +6,6 @@
 
 apiVersion: v1
 appVersion: "2.0"
-description: Bevel Chart for vault and kubernetes configuration
+description: "Shared: Vault and Kubernetes configuration"
 name: bevel-vault-mgmt
 version: '0.15.0'
