--- a/platforms/shared/charts/letsencrypt-cert/Chart.yaml
+++ b/platforms/shared/charts/letsencrypt-cert/Chart.yaml
@@ -5,7 +5,7 @@
 ##############################################################################################
 apiVersion: v2
 name: letsencrypt-cert
-description: A Helm chart for creating TLS certificates using letencrypt CA
+description: "Creates TLS certificates using letencrypt CA"
 
 # A chart can be either an 'application' or a 'library' chart.
 #
