[fabric] Chaincode commit not working Primary Changes -------------- 1.Fixed error in the commit chaincode and invoke chaincode jobs because the organization name contains a '-' 2.Fixed conflict of the variable orderer.address in platforms/hyperledger-fabric/configuration/roles/k8_component/templates/existing_peer_cli.tpl that caused errors in fabric operations or in deployment of the external chaincode
Modifications
-----------------------
platforms/hyperledger-fabric/charts/fabric-chaincode-commit/templates/commit_chaincode.yaml
platforms/hyperledger-fabric/charts/fabric-chaincode-invoke/templates/invoke_chaincode.yaml
platforms/hyperledger-fabric/configuration/roles/k8_component/templates/existing_peer_cli.tpl

fixes #2451

Signed-off-by: mgCepeda <marina.gomez.cepeda@accenture.com>

--- a/platforms/hyperledger-fabric/charts/fabric-chaincode-commit/templates/commit_chaincode.yaml
+++ b/platforms/hyperledger-fabric/charts/fabric-chaincode-commit/templates/commit_chaincode.yaml
@@ -80,7 +80,7 @@ spec:
         - name: MOUNT_PATH
           value: /secret
         {{- range $org := $.Values.endorsers.nameslist }}
-        - name: {{ $org.name | upper }}_ENDORSER_SECRET
+        - name: {{ $org.name | upper | replace "-" "_" }}_ENDORSER_SECRET
           valueFrom:
             secretKeyRef:
               name: {{ $org.name }}-endorser-cert
@@ -145,7 +145,7 @@ spec:
               OUTPUT_PATH="${MOUNT_PATH}/endorsers/$name/msp"
               echo $OUTPUT_PATH
               mkdir -p ${OUTPUT_PATH}/cacerts
-              var_name=$(echo "${name}_endorser_secret" | tr '[:lower:]' '[:upper:]')
+              var_name=$(echo "${name}_endorser_secret" | tr '[:lower:]' '[:upper:]' | tr '-' '_')
               endorser_certificate=$(eval echo "\$$var_name")
               echo $endorser_certificate | base64 -d >> ${OUTPUT_PATH}/cacerts/ca.crt
 
@@ -159,6 +159,7 @@ spec:
                     \"cacerts\": \"${CACERTS_FORMAT}\"
                   }  
               }" > payload.json
+
               SECRETPREFIX=${SECRET_PATH}/data/crypto/peerOrganizations/${CREATOR_NS}/endorsers/${name}/users/admin
               vault_secret_key=${SECRETPREFIX}/msp
               
