--- a/platforms/hyperledger-fabric/charts/fabric-chaincode-commit/templates/commit_chaincode.yaml
+++ b/platforms/hyperledger-fabric/charts/fabric-chaincode-commit/templates/commit_chaincode.yaml
@@ -215,8 +215,14 @@ spec:
           COMMIT_ARGUMENTS=$(< COMMIT_ARGUMENTS.txt)
           
           COMMITREADINESS_CMD="peer lifecycle chaincode checkcommitreadiness --channelID ${CHANNEL_NAME} --name ${CHAINCODE_NAME} --version ${CHAINCODE_VERSION} --sequence ${CHAINCODE_SEQUENCE} --init-required --output json"
-          COMMIT_CMD="peer lifecycle chaincode commit -o ${ORDERER_URL} --tls ${CORE_PEER_TLS_ENABLED} --cafile $ORDERER_CA --channelID ${CHANNEL_NAME} --name ${CHAINCODE_NAME} --version ${CHAINCODE_VERSION} --sequence ${CHAINCODE_SEQUENCE} --init-required"
+          COMMIT_CMD="peer lifecycle chaincode commit -o ${ORDERER_URL} --tls ${CORE_PEER_TLS_ENABLED} --cafile $ORDERER_CA --channelID ${CHANNEL_NAME} --name ${CHAINCODE_NAME} --version ${CHAINCODE_VERSION} --sequence ${CHAINCODE_SEQUENCE}"
           
+          if [ "${INIT_REQUIRED}" = "true" ]
+          then
+            init_flag=" --init-required"
+            APPROVE_CMD=${COMMIT_CMD}${init_flag}
+          fi
+
           for item in $ENDORSERS_CORE_PEER_ADDR
           do
             COMMIT_CMD=${COMMIT_CMD}" --peerAddresses "${item}
@@ -321,6 +327,8 @@ spec:
           value: "{{ $.Values.chaincode.pdc.enabled }}"
         - name: NETWORK_VERSION
           value: "{{ $.Values.metadata.network.version }}"
+        - name: INIT_REQUIRED
+          value: "{{ $.Values.chaincode.initrequired }}"
         volumeMounts:
         - name: certificates
           mountPath: /opt/gopath/src/github.com/hyperledger/fabric/crypto
