[fabric] Hotfix init required
**Primary Changes**

1.Added the init_required field in the tpl files.
2.Fixed error in the invoke chaincode job.
3.Fixed errors in variable names

**Modifications**
platforms/hyperledger-fabric/charts/fabric-chaincode-commit/templates/commit_chaincode.yaml
platforms/hyperledger-fabric/configuration/roles/create/chaincode/invoke/tasks/nested_valuefile.yaml
platforms/hyperledger-fabric/configuration/roles/helm_component/templates/approve_chaincode_job.tpl
platforms/hyperledger-fabric/configuration/roles/helm_component/templates/commit_chaincode_job.tpl

Signed-off-by: mgCepeda <marina.gomez.cepeda@accenture.com>

--- a/platforms/hyperledger-fabric/charts/fabric-chaincode-commit/templates/commit_chaincode.yaml
+++ b/platforms/hyperledger-fabric/charts/fabric-chaincode-commit/templates/commit_chaincode.yaml
@@ -221,7 +221,7 @@ spec:
           if [ "${INIT_REQUIRED}" = "true" ]
           then
             init_flag=" --init-required"
-            APPROVE_CMD=${COMMIT_CMD}${init_flag}
+            COMMIT_CMD=${COMMIT_CMD}${init_flag}
           fi
 
           for item in $ENDORSERS_CORE_PEER_ADDR
