Fixed network-schema and added shared changes
Signed-off-by: Roy,Sownak <sownak.roy@accenture.com>

--- a/platforms/quorum/configuration/deploy-network.yaml
+++ b/platforms/quorum/configuration/deploy-network.yaml
@@ -66,11 +66,10 @@
     include_role:
       name: "{{ playbook_dir }}/../../shared/configuration/roles/setup/vault_kubernetes"
     vars:
-      policy_type: "quorum"
       name: "{{ org.name | lower }}"
       component_ns: "{{ org.name | lower }}-quo"
       component_name: "{{ org.name | lower }}-vaultk8s-job"
-      component_auth: "quorum{{ org.name | lower }}"
+      component_auth: "{{ network.env.type }}{{ name }}"
       component_type: "organization"
       kubernetes: "{{ org.k8s }}"
       vault: "{{ org.vault }}"
