--- a/platforms/r3-corda-ent/configuration/roles/setup/cenm/tasks/main.yaml
+++ b/platforms/r3-corda-ent/configuration/roles/setup/cenm/tasks/main.yaml
@@ -33,8 +33,9 @@
   include_role: 
     name: "{{ playbook_dir }}/../../shared/configuration/roles/setup/vault_kubernetes"
   vars:
+    name: "{{ org.name | lower }}"
     component_name: "{{ org.name | lower }}-vaultk8s-job"
-    component_auth: "cordaent{{ org.name | lower }}"
+    component_auth: "{{ network.env.type }}{{ name }}"
     component_type: "{{ org.type | lower }}"
 
 # Check if the certs are already created
