--- a/platforms/r3-corda-ent/configuration/roles/setup/notary/tasks/notary_node.yaml
+++ b/platforms/r3-corda-ent/configuration/roles/setup/notary/tasks/notary_node.yaml
@@ -34,7 +34,7 @@
     name: "{{ playbook_dir }}/../../shared/configuration/roles/setup/vault_kubernetes"
   vars:
     component_name: "{{ org.name | lower }}-vaultk8s-job"
-    component_auth: "cordaent{{ org.name | lower }}"
+    component_auth: "{{ network.env.type }}{{ org.name | lower }}"
     component_type: "{{ org.type | lower }}"
 
 # Create ambassador certificates for notary
