--- a/platforms/shared/charts/bevel-storageclass/templates/storageclass.yaml
+++ b/platforms/shared/charts/bevel-storageclass/templates/storageclass.yaml
@@ -7,7 +7,7 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: "{{ .Values.metadata.name }}"
+  name: {{ include "bevel-storageclass.fullname" . }}
 reclaimPolicy: "{{ .Values.reclaimPolicy }}"
 volumeBindingMode: "{{ .Values.volumeBindingMode }}"
 {{- if .Values.provisioner }}
@@ -15,22 +15,20 @@ provisioner: "{{ .Values.provisioner }}"
 {{- else }}
 {{ include "provisioner" . }}
 {{- end }}
-{{- with index .Values.parameters (index .Values.cloud_provider) }}
+{{- with index .Values.parameters (index .Values.global.cluster.provider) }}
 parameters:
   {{- range $key, $value := . }}
   {{ $key }}: "{{ $value }}"
   {{- end }}
 {{- end }}
-{{- if .Values.allowedTopologies }}
+{{- if .Values.allowedTopologies.enabled }}
 allowedTopologies:
-{{- range .Values.allowedTopologies }}
   - matchLabelExpressions:
-{{- range .matchLabelExpressions }}
+{{- range .Values.allowedTopologies.matchLabelExpressions }}
       - key: {{ .key }}
         values:
 {{- range .values }}
           - {{ . | quote }}
-{{- end }}
 {{- end }}
 {{- end }}
 {{- end }}
