--- a/platforms/shared/configuration/site.yaml
+++ b/platforms/shared/configuration/site.yaml
@@ -20,14 +20,8 @@
 - import_playbook: setup-k8s-environment.yaml 
   when: reset is undefined or reset == 'false'
 
-# Delete the generic network resources from kuberentes 
-- import_playbook: delete-network.yaml
-  when:
-  - reset is defined and reset == 'true'
-  - network.env.type != 'operator'
-
 ############################################
-# Playbook for Hypelerger Fabric Operations
+# Playbook for Hyperledger Fabric Operations
 ############################################
 
 # Deploy network
@@ -71,7 +65,7 @@
     - (reset is undefined or reset == 'false')
 
 ############################################
-# Playbook for Hypeledger Indy Operations
+# Playbook for Hyperledger Indy Operations
 ############################################
 
 # Deploy network
@@ -174,3 +168,9 @@
   - network.type == 'substrate'
   - network.env.type != 'operator'
   - reset is defined and reset == 'true'
+
+# Delete the generic network resources from kuberentes 
+- import_playbook: delete-network.yaml
+  when:
+  - reset is defined and reset == 'true'
+  - network.env.type != 'operator'
