--- a/platforms/substrate/configuration/deploy-network.yaml
+++ b/platforms/substrate/configuration/deploy-network.yaml
@@ -65,11 +65,12 @@
     include_role: 
       name: "setup/vault_kubernetes"
     vars:
+      name: "{{ item.name | lower }}"
       component_ns: "{{ item.name | lower }}-subs"
       kubernetes: "{{ item.k8s }}"
       vault: "{{ item.vault }}"
       component_name: "{{ item.name | lower }}-vaultk8s-job"
-      component_auth: "substrate{{ item.name | lower }}"
+      component_auth: "{{ network.env.type }}{{ name }}"
       component_type: "organization"
     loop: "{{ network['organizations'] }}"
 
