--- a/platforms/shared/charts/bevel-storageclass/Chart.yaml
+++ b/platforms/shared/charts/bevel-storageclass/Chart.yaml
@@ -5,7 +5,7 @@
 ##############################################################################################
 
 apiVersion: v1
-appVersion: "2.0"
-description: "Shared: Deploys a StorageClass that can be used to provision persistent volumes for nodes"
+appVersion: "latest"
+description: "Shared: Deploys a StorageClass that can be used to provision persistent volumes for nodes."
 name: bevel-storageclass
-version: '0.15.0'
+version: '0.15.1'
