feat(fabric): fixed policy_type variable
changes: Added policy_type variable in the deploy network file

fixes: #2473

Signed-off-by: saikumarbommakanti <sai.kumar.bommakanti@accenture.com>

--- a/platforms/hyperledger-fabric/configuration/deploy-network.yaml
+++ b/platforms/hyperledger-fabric/configuration/deploy-network.yaml
@@ -58,6 +58,7 @@
         component_auth: "{{ network.env.type }}{{ name }}"
         kubernetes: "{{ org.k8s }}"
         vault: "{{ org.vault }}"
+        policy_type: "fabric"
         gitops: "{{ org.gitops }}"
       loop: "{{ network['organizations'] }}"
       loop_control:
