--- a/platforms/shared/charts/bevel-vault-mgmt/templates/job.yaml
+++ b/platforms/shared/charts/bevel-vault-mgmt/templates/job.yaml
@@ -105,7 +105,7 @@ spec:
 
               # Check if authPath already created
               vault_auth_check=$(curl --header "X-Vault-Token: $ROOT_TOKEN" \
-                ${VAULT_ADDR}/v1/sys/auth | jq '."{{ $.Values.global.vault.authPath }}/"');
+                ${VAULT_ADDR}/v1/sys/auth | jq '."${KUBERNETES_AUTH_PATH}/"');
               
               if [ "$vault_auth_check" == 'null' ]; then
                 echo "authPath does not exist. Creating ..."
