--- a/platforms/shared/configuration/roles/check/helm_component/tasks/main.yaml
+++ b/platforms/shared/configuration/roles/check/helm_component/tasks/main.yaml
@@ -8,7 +8,7 @@
 # Task to check if Job deployed and completed
 # This task will try for a maximum of 10 times with an interval of
 # 60 seconds between each try
-- name: 'Wait for {{ component_type }} {{ component_name }} in {{ namespace }}'
+- name: "Wait for {{ component_type }} {{ component_name }} in {{ namespace }}"
   k8s_info:
     kind: "Job"
     namespace: "{{ namespace }}"
@@ -23,7 +23,7 @@
   when: component_type == "Job"
 
 # one time job check and registers the result variable
-- name: 'Check for {{ job_title }} job on {{ component_name }}'
+- name: "Check for {{ job_title }} job on {{ component_name }}"
   k8s_info:
     kind: "Pod"
     namespace: "{{ namespace }}"
@@ -37,7 +37,7 @@
 # Task to check if Pod is deployed and running
 # This task will try for a maximum of 10 times with an interval of
 # 60 seconds between each try
-- name: 'Wait for {{ component_type }} {{ component_name }} in {{ namespace }}'
+- name: "Wait for {{ component_type }} {{ component_name }} in {{ namespace }}"
   k8s_info:
     kind: "Pod"
     namespace: "{{ namespace }}"
@@ -47,7 +47,7 @@
     field_selectors:
       - status.phase=Running
   register: component_data
-  retries: "{{ network.env.retry_count}}"
+  retries: "{{ network.env.retry_count }}"
   delay: "{{ delay | default(30) }}"
   until: component_data.resources|length > 0
   when: component_type == "Pod"
