[substrate] Updated for new release
Signed-off-by: Roy,Sownak <sownak.roy@accenture.com>

--- a/platforms/shared/charts/bevel-vault-mgmt/templates/configmap.yaml
+++ b/platforms/shared/charts/bevel-vault-mgmt/templates/configmap.yaml
@@ -67,3 +67,11 @@ data:
         }"
     }
     {{ end }}
+    {{ if eq .Values.global.vault.network "substrate" -}}
+    {
+      "policy": 
+        "path \"{{ .Values.global.vault.secretEngine }}/{{ .Values.global.vault.secretPrefix }}/*\" {
+          capabilities = [\"list\", \"read\", \"create\", \"update\"]
+        }"
+    }
+    {{ end }}
