--- a/platforms/shared/charts/bevel-vault-mgmt/templates/configmap.yaml
+++ b/platforms/shared/charts/bevel-vault-mgmt/templates/configmap.yaml
@@ -59,7 +59,7 @@ data:
         }"
     }
     {{ end }}
-    {{ if eq .Values.global.vault.network "corda-ent" -}}
+    {{ if eq .Values.global.vault.network "corda-enterprise" -}}
     {
       "policy": 
         "path \"{{ .Values.global.vault.secretEngine }}/{{ .Values.global.vault.secretPrefix }}/*\" {
