[chore] Update chart version for release
Signed-off-by: Roy,Sownak <sownak.roy@accenture.com>

--- a/platforms/shared/charts/bevel-scripts/Chart.yaml
+++ b/platforms/shared/charts/bevel-scripts/Chart.yaml
@@ -7,7 +7,7 @@
 apiVersion: v2
 name: bevel-scripts
 description: "Shared: Create configmaps of scripts used in Bevel"
-version: '0.15.3'
+version: 1.0.0
 appVersion: "latest"
 keywords:
   - bevel
