--- a/platforms/shared/charts/bevel-storageclass/Chart.yaml
+++ b/platforms/shared/charts/bevel-storageclass/Chart.yaml
@@ -8,4 +8,4 @@ apiVersion: v1
 appVersion: "latest"
 description: "Shared: Deploys a StorageClass that can be used to provision persistent volumes for nodes."
 name: bevel-storageclass
-version: '0.15.3'
+version: 1.0.0
