--- a/platforms/hyperledger-indy/configuration/samples/network-indy-newnode-to-baf-network.yaml
+++ b/platforms/hyperledger-indy/configuration/samples/network-indy-newnode-to-baf-network.yaml
@@ -21,10 +21,13 @@ network:
   env:
     type: indy             # tag for the environment. Important to run multiple flux on single cluster
     proxy: ambassador               # value has to be 'ambassador' as 'haproxy' has not been implemented for Indy
-    ambassadorPorts:
+    proxy_namespace: "ambassador"
+    #  These ports are enabled per cluster, so if you have multiple clusters you do not need so many ports
+    #  This sample uses a single cluster, so we have to open 3 ports for each Node. These ports are again specified for each organization below
+    ambassadorPorts:                # Any additional Ambassador ports can be given here, this is valid only if proxy='ambassador'
       portRange:              # For a range of ports
-        from: 9711
-        to: 9720
+        from: 15010
+        to: 15052 
     loadBalancerSourceRanges: # (Optional) Default value is '0.0.0.0/0', this value can be changed to any other IP adres or list (comma-separated without spaces) of IP adresses, this is valid only if proxy='ambassador'
     retry_count: 40                 # Retry count for the checks
     external_dns: enabled           # Should be enabled if using external-dns for automatic route configuration
