--- a/platforms/quorum/charts/quorum-genesis/templates/genesis-job-cleanup.yaml
+++ b/platforms/quorum/charts/quorum-genesis/templates/genesis-job-cleanup.yaml
@@ -2,11 +2,11 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: {{ include "besu-genesis.name" . }}-cleanup
+  name: {{ include "quorum-genesis.name" . }}-cleanup
   labels:
-    app.kubernetes.io/name: besu-genesis-job-cleanup
+    app.kubernetes.io/name: quorum-genesis-job-cleanup
     app.kubernetes.io/component: genesis-job-cleanup
-    app.kubernetes.io/part-of: {{ include "besu-genesis.fullname" . }}
+    app.kubernetes.io/part-of: {{ include "quorum-genesis.fullname" . }}
     app.kubernetes.io/namespace: {{ .Release.Namespace }}
     app.kubernetes.io/managed-by: helm
   namespace: {{ .Release.Namespace }}
@@ -20,9 +20,9 @@ spec:
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: besu-genesis-job-cleanup
+        app.kubernetes.io/name: quorum-genesis-job-cleanup
         app.kubernetes.io/component: genesis-job-cleanup
-        app.kubernetes.io/part-of: {{ include "besu-genesis.fullname" . }}
+        app.kubernetes.io/part-of: {{ include "quorum-genesis.fullname" . }}
         app.kubernetes.io/namespace: {{ .Release.Namespace }}
         app.kubernetes.io/managed-by: helm
     spec:
@@ -30,7 +30,7 @@ spec:
       restartPolicy: "Never"
       containers:
         - name: delete-genesis
-          image: "{{ .Values.image.genesisUtils.repository }}:{{ .Values.image.genesisUtils.tag }}"
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           securityContext:
             runAsUser: 0
           imagePullPolicy: {{ .Values.image.pullPolicy }}
@@ -41,14 +41,8 @@ spec:
             - |
 
 {{- if .Values.settings.removeGenesisOnDelete }}
-              if kubectl get configmap --namespace {{ .Release.Namespace }} besu-genesis &> /dev/null; then
+              if kubectl get configmap --namespace {{ .Release.Namespace }} quorum-genesis &> /dev/null; then
                 echo "Deleting genesis configmap in k8s ..."
-                kubectl delete configmap --namespace {{ .Release.Namespace }} besu-genesis
+                kubectl delete configmap --namespace {{ .Release.Namespace }} quorum-genesis
               fi
-
-              if kubectl get configmap --namespace {{ .Release.Namespace }} besu-peers &> /dev/null; then
-                echo "Deleting node-enodes configmap in k8s ..."
-                kubectl delete configmap --namespace {{ .Release.Namespace }} besu-peers
-              fi
-
-{{- end}} 
+{{- end}}
