--- a/platforms/quorum/charts/quorum-node/Chart.yaml
+++ b/platforms/quorum/charts/quorum-node/Chart.yaml
@@ -4,14 +4,13 @@
 #  SPDX-License-Identifier: Apache-2.0
 ##############################################################################################
 apiVersion: v1
-name: quorum-tessera-node
-description: "Quorum: Deploys Tessera transaction manager nodes"
+name: quorum-node
+description: "Quorum: Deploys a Quorum node for a POA network"
 version: 1.0.1
-# Tessera version 
-appVersion: '21.7.3'
+appVersion: latest
 keywords:
   - bevel
-  - tessera
+  - ethereum
   - quorum
   - hyperledger
   - enterprise
