--- a/platforms/quorum/charts/quorum-tlscert-gen/Chart.yaml
+++ b/platforms/quorum/charts/quorum-tlscert-gen/Chart.yaml
@@ -3,17 +3,16 @@
 #
 #  SPDX-License-Identifier: Apache-2.0
 ##############################################################################################
+
 apiVersion: v1
-name: quorum-tessera-node
-description: "Quorum: Deploys Tessera transaction manager nodes"
-version: 1.0.1
-# Tessera version 
-appVersion: '21.7.3'
+name: quorum-tls-gen
+description: "Quorum: Generates and stores TLS certificates for nodes and tessera"
+version: 1.0.0
+appVersion: latest
 keywords:
   - bevel
-  - tessera
-  - quorum
   - hyperledger
+  - quorum
   - enterprise
   - blockchain
   - deployment
