--- a/platforms/quorum/charts/quorum-tlscert-gen/templates/job-cleanup.yaml
+++ b/platforms/quorum/charts/quorum-tlscert-gen/templates/job-cleanup.yaml
@@ -2,11 +2,11 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: {{ include "besu-tlscert-gen.name" . }}-cleanup
+  name: {{ include "quorum-tlscert-gen.name" . }}-cleanup
   labels:
-    app.kubernetes.io/name: besu-tlscert-gen-job-cleanup
+    app.kubernetes.io/name: quorum-tlscert-gen-job-cleanup
     app.kubernetes.io/component: job-cleanup
-    app.kubernetes.io/part-of: {{ include "besu-tlscert-gen.fullname" . }}
+    app.kubernetes.io/part-of: {{ include "quorum-tlscert-gen.fullname" . }}
     app.kubernetes.io/namespace: {{ .Release.Namespace }}
     app.kubernetes.io/managed-by: helm
   namespace: {{ .Release.Namespace }}
@@ -20,9 +20,9 @@ spec:
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: besu-tlscert-gen-job-cleanup
+        app.kubernetes.io/name: quorum-tlscert-gen-job-cleanup
         app.kubernetes.io/component: job-cleanup
-        app.kubernetes.io/part-of: {{ include "besu-tlscert-gen.fullname" . }}
+        app.kubernetes.io/part-of: {{ include "quorum-tlscert-gen.fullname" . }}
         app.kubernetes.io/namespace: {{ .Release.Namespace }}
         app.kubernetes.io/managed-by: helm
     spec:
@@ -43,7 +43,7 @@ spec:
             - -c
           args:
             - |
-              if kubectl get secret --namespace {{ .Release.Namespace }} {{ include "besu-tlscert-gen.name" . }}-tls-certs &>/dev/null; then
+              if kubectl get secret --namespace {{ .Release.Namespace }} {{ include "quorum-tlscert-gen.name" . }}-tls-certs &>/dev/null; then
                 echo "Deleting tls-certs secret in k8s ..."
-                kubectl delete secret --namespace {{ .Release.Namespace }} {{ include "besu-tlscert-gen.name" . }}-tls-certs
+                kubectl delete secret --namespace {{ .Release.Namespace }} {{ include "quorum-tlscert-gen.name" . }}-tls-certs
               fi
