--- a/platforms/shared/charts/bevel-vault-mgmt/templates/configmap.yaml
+++ b/platforms/shared/charts/bevel-vault-mgmt/templates/configmap.yaml
@@ -51,7 +51,7 @@ data:
     {{ if eq .Values.global.vault.network "quorum" -}}
     {
       "policy": 
-        "path \"{{ .Values.global.vault.secretEngine }}/{{ .Values.global.vault.secretPrefix }}/*\" {
+        "path \"{{ .Values.global.vault.secretEngine }}/{{ .Values.global.vault.secretPrefix }}/crypto/*\" {
           capabilities = [\"list\", \"read\", \"create\", \"update\"]
         }
         path \"{{ .Values.global.vault.secretEngine }}/{{ .Values.global.vault.secretPrefix }}/smartContracts/*\" {
