--- a/platforms/hyperledger-besu/charts/besu-node/templates/node-statefulset.yaml
+++ b/platforms/hyperledger-besu/charts/besu-node/templates/node-statefulset.yaml
@@ -172,9 +172,10 @@ spec:
               --identity={{ .Values.node.besu.identity | quote }} --miner-enabled=false \
               --Xdns-enabled=true --Xdns-update-enabled=true --Xnat-kube-service-name={{ include "besu-node.fullname" . }} \
               --min-gas-price=0
+
         livenessProbe:
           httpGet:
-            path: /
+            path: /liveness
             port: 8545
           initialDelaySeconds: 180
           periodSeconds: 60
