--- a/platforms/quorum/charts/quorum-ibft-crypto-gen/Chart.yaml
+++ b/platforms/quorum/charts/quorum-ibft-crypto-gen/Chart.yaml
@@ -6,6 +6,6 @@
 
 apiVersion: v1
 appVersion: "2.0"
-description: "Quorum: This Helm chart deploys a secure MySQL database and Tessera transaction manager node."
-name: quorum-tessera-node
+description: "Quorum: This Helm Chart generates the crypto materials for ibft consensus only if they are not already available in the vault."
+name: quorum-ibft-crypto-gen
 version: 1.0.0
