--- a/platforms/quorum/charts/quorum-member-node/Chart.yaml
+++ b/platforms/quorum/charts/quorum-member-node/Chart.yaml
@@ -6,6 +6,6 @@
 
 apiVersion: v1
 appVersion: "2.0"
-description: "Quorum: This Helm chart deploys a secure MySQL database and Tessera transaction manager node."
-name: quorum-tessera-node
+description: "Quorum: This Helm chart deploys an Quorum member (non-validator) node with or without the integration of Tessera transaction manager."
+name: quorum-member-node
 version: 1.0.0
