--- a/platforms/quorum/charts/quorum-tessera-node/templates/configmap.yaml
+++ b/platforms/quorum/charts/quorum-tessera-node/templates/configmap.yaml
@@ -8,96 +8,92 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "quorum-tessera-node.fullname" . }}-tessera-config
-  namespace: {{ .Release.Namespace }}
+  name: tessera-config-{{ .Values.node.name }}
+  namespace: {{ .Values.metadata.namespace }}
   labels:
     app.kubernetes.io/name: tessera-config
-    app.kubernetes.io/component: goquorum
-    app.kubernetes.io/part-of: {{ include "quorum-tessera-node.fullname" . }}
-    app.kubernetes.io/namespace: {{ .Release.Namespace }}
+    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
     app.kubernetes.io/instance: {{ .Release.Name }}
-data:  
+data:
   tessera-config.json.tmpl: |-
     {
-      "mode": "orion",
       "useWhiteList": "false",
       "jdbc": {
-        "username": {{ .Values.tessera.dbUsername | quote }},
+        "username": {{ .Values.tessera.dbusername | quote }},
         "password": "",
-        "url": "jdbc:mysql://{{ include "quorum-tessera-node.fullname" . }}:{{ .Values.tessera.dbport }}/demodb"
+        "url": {{ .Values.tessera.dburl | quote }}
       },
       "serverConfigs": [
         {
           "app": "ThirdParty",
           "enabled": true,
-          "serverAddress": "http://{{ include "quorum-tessera-node.fullname" . }}:{{ .Values.tessera.tpport }}",
+          "serverAddress": "http://{{ .Values.node.name }}-tessera:9080",
           "communicationType": "REST"
         },
         {
           "app": "Q2T",
           "enabled": true,
-          "serverAddress": {{ include "quorum-tessera-node.clientURL" . }},          
+          "serverAddress": {{ .Values.tessera.clienturl | quote }},          
           "sslConfig": {
             "tls": "OFF",
             "generateKeyStoreIfNotExisted": true,
-            "sslConfigType": "SERVER_ONLY",
+            "serverKeyStore": "{{ .Values.node.mountPath }}/tm/server-keystore",
+            "serverKeyStorePassword": "quorum",
+            "serverTrustStore": "{{ .Values.node.mountPath }}/tm/server-truststore",
+            "serverTrustStorePassword": "quorum",
             "serverTrustMode": {{ .Values.tessera.trust | quote }},
-            "serverTlsKeyPath": "{{ .Values.tessera.dataPath }}/crypto/tessera_cer.key",
-            "serverTlsCertificatePath": "{{ .Values.tessera.dataPath }}/crypto/tessera_cer.pem",
-            "serverTrustCertificates": ["{{ .Values.tessera.dataPath }}/crypto/tessera_ca.pem"],
+            "knownClientsFile": "{{ .Values.node.mountPath }}/tm/knownClients",
+            "clientKeyStore": "{{ .Values.node.mountPath }}/tm/client-keystore",
+            "clientKeyStorePassword": "quorum",
+            "clientTrustStore": "{{ .Values.node.mountPath }}/tm/client-truststore",
+            "clientTrustStorePassword": "quorum",
             "clientTrustMode": {{ .Values.tessera.trust | quote }},
-            "clientTlsKeyPath": "{{ .Values.tessera.dataPath }}/crypto/tessera_cer.key",
-            "clientTlsCertificatePath": "{{ .Values.tessera.dataPath }}/crypto/tessera_cer.pem",
-            "clientTrustCertificates": ["{{ .Values.tessera.dataPath }}/crypto/tessera_ca.pem"],
-            "knownClientsFile": "{{ .Values.tessera.dataPath }}/crypto/known_client",
-            "knownServersFile": "{{ .Values.tessera.dataPath }}/crypto/known_server",
-            "clientAuth": false
+            "knownServersFile": "{{ .Values.node.mountPath }}/tm/knownServers"
           },
           "communicationType": "REST"
         },
         {
           "app": "P2P",
           "enabled": true,
-          "serverAddress": {{ include "quorum-tessera-node.tesseraURL" . }},
+          "serverAddress": {{ .Values.tessera.url | quote }},
           "sslConfig": {
-            "tls": {{ .Values.tessera.tlsMode | quote }},
+            "tls": {{ .Values.tessera.tls | quote }},
             "generateKeyStoreIfNotExisted": true,
-            "sslConfigType": "SERVER_AND_CLIENT",
+            "serverKeyStore": "{{ .Values.node.mountPath }}/tm/server-keystore",
+            "serverKeyStorePassword": "quorum",
+            "serverTrustStore": "{{ .Values.node.mountPath }}/tm/server-truststore",
+            "serverTrustStorePassword": "quorum",
             "serverTrustMode": {{ .Values.tessera.trust | quote }},
-            "serverTlsKeyPath": "{{ .Values.tessera.dataPath }}/crypto/tessera_cer.key",
-            "serverTlsCertificatePath": "{{ .Values.tessera.dataPath }}/crypto/tessera_cer.pem",
-            "serverTrustCertificates": ["{{ .Values.tessera.dataPath }}/crypto/tessera_ca.pem"],            
+            "knownClientsFile": "{{ .Values.node.mountPath }}/tm/knownClients",
+            "clientKeyStore": "{{ .Values.node.mountPath }}/tm/client-keystore",
+            "clientKeyStorePassword": "quorum",
+            "clientTrustStore": "{{ .Values.node.mountPath }}/tm/client-truststore",
+            "clientTrustStorePassword": "quorum",
             "clientTrustMode": {{ .Values.tessera.trust | quote }},
-            "clientTlsKeyPath": "{{ .Values.tessera.dataPath }}/crypto/tessera_cer.key",
-            "clientTlsCertificatePath": "{{ .Values.tessera.dataPath }}/crypto/tessera_cer.pem",
-            "clientTrustCertificates": ["{{ .Values.tessera.dataPath }}/crypto/tessera_ca.pem"],
-            "knownClientsFile": "{{ .Values.tessera.dataPath }}/crypto/known_client2",
-            "knownServersFile": "{{ .Values.tessera.dataPath }}/crypto/known_server2"
+            "knownServersFile": "{{ .Values.node.mountPath }}/tm/knownServers"
           },
           "communicationType": "REST"
         }
       ],
-      "peer": [
-        {
-          "url": {{ include "quorum-tessera-node.tesseraURL" . }}
-        }
-        {{- range .Values.tessera.peerNodes }}
-        ,{
-          "url": {{ .url | quote }}
-        }
-        {{- end }}
-      ],
+      "peer": {{ .Values.tessera.othernodes | toPrettyJson | indent 6 }},
       "keys": {
-      {{ if .Values.tessera.password }}
-        "passwordFile": "{{ .Values.tessera.passwordPath }}",
-      {{ end }}
-        "keyData": [
-          {
-            "privateKeyPath": "/keys/tm.key",
-            "publicKeyPath": "/keys/tm.pub"
-          }
-        ]
+          "keyVaultConfigs": [
+              {
+                  "keyVaultType": "HASHICORP",
+                  "properties": {
+                      "url": "{{ $.Values.vault.address }}"
+                  }
+              }
+          ],
+          "keyData": [
+              {
+                  "hashicorpVaultSecretEngineName": "{{ $.Values.vault.secretengine }}",
+                  "hashicorpVaultSecretName": "{{ $.Values.vault.tmsecretpath }}",
+                  "hashicorpVaultPrivateKeyId": "privateKey",
+                  "hashicorpVaultPublicKeyId": "publicKey"
+              }
+          ]
       },
       "alwaysSendTo": []
     }
