--- a/platforms/quorum/charts/quorum-validator-node/Chart.yaml
+++ b/platforms/quorum/charts/quorum-validator-node/Chart.yaml
@@ -6,6 +6,6 @@
 
 apiVersion: v1
 appVersion: "2.0"
-description: "Quorum: This Helm chart deploys a secure MySQL database and Tessera transaction manager node."
-name: quorum-tessera-node
+description: "Quorum: This Helm chart deploys a validator Quorum node."
+name: quorum-validator-node
 version: 1.0.0
