feat(quorum): introduce helm chart deployment capability
This commit enhances the deployment process for the Quorum Distributed Ledger Technology (DLT) network by exclusively leveraging Helm charts.

Four new Helm charts have been introduced to streamline the deployment process:
1. quorum-genesis: Initializes the network with specific requirements.
2. quorum-node: Starts the network and allows adding new nodes.
3. quorum-tessera-node: Facilitates privacy by enabling transaction encryption using Tessera.
4. quorum-tlscert-gen: Enables secure access to the node via HTTPS.

Each chart comes with a README to help users customize the network.

These changes make deploying and managing the Quorum DLT network smoother with Helm.

Other Improvements:
- Added error handling to ensure clean uninstallation of the besu-genesis and besu-tlscert-gen charts.
- Updated the README's API Call section.

fixes #2484

Signed-off-by: saurabhkumarkardam <saurabh.kumar.kardam@accenture.com>

--- a/platforms/quorum/charts/quorum-tlscert-gen/templates/job.yaml
+++ b/platforms/quorum/charts/quorum-tlscert-gen/templates/job.yaml
@@ -7,13 +7,13 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: "{{ include "besu-tlscert-gen.name" . }}"
+  name: "{{ include "quorum-tlscert-gen.name" . }}"
   namespace: "{{ .Release.Namespace }}"
   annotations:
     helm.sh/hook-delete-policy: "before-hook-creation"
   labels:
-    app: "{{ include "besu-tlscert-gen.name" . }}"
-    app.kubernetes.io/name: "{{ include "besu-tlscert-gen.name" . }}"
+    app: "{{ include "quorum-tlscert-gen.name" . }}"
+    app.kubernetes.io/name: "{{ include "quorum-tlscert-gen.name" . }}"
     app.kubernetes.io/managed-by: {{ .Release.Service }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     {{- if $.Values.labels }}
@@ -28,8 +28,8 @@ spec:
   template:
     metadata:
       labels:
-        app: "{{ include "besu-tlscert-gen.name" . }}"
-        app.kubernetes.io/name: "{{ include "besu-tlscert-gen.name" . }}"
+        app: "{{ include "quorum-tlscert-gen.name" . }}"
+        app.kubernetes.io/name: "{{ include "quorum-tlscert-gen.name" . }}"
         app.kubernetes.io/managed-by: {{ .Release.Service }}
         app.kubernetes.io/instance: {{ .Release.Name }}
         {{- if $.Values.labels }}
@@ -50,14 +50,17 @@ spec:
       - name: certificates
         emptyDir:
           medium: Memory
+{{- if eq .Values.global.vault.type "hashicorp" }}
       - name: scripts-volume
         configMap:
           name: bevel-vault-script
           defaultMode: 0777
+{{- end }}
       initContainers:
       - name: init-check-certificates
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ $.Values.image.pullPolicy }}
+{{- if eq .Values.global.vault.type "hashicorp" }}
         env:
         - name: VAULT_ADDR
           value: "{{ $.Values.global.vault.address }}"
@@ -71,6 +74,7 @@ spec:
           value: "{{ $.Values.global.vault.role }}"
         - name: VAULT_TYPE
           value: "{{ $.Values.global.vault.type }}"
+{{- end }}
         command: ["sh", "-c"]
         args:
         - |-
@@ -115,14 +119,17 @@ spec:
         volumeMounts:
           - name: certificates
             mountPath: /certificates
+{{- if eq .Values.global.vault.type "hashicorp" }}
           - name: scripts-volume
             mountPath: /scripts/bevel-vault.sh
             subPath: bevel-vault.sh
+{{- end }}
       containers:
       - name:  "generate-certs"
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ $.Values.image.pullPolicy }}
         env:
+{{- if eq .Values.global.vault.type "hashicorp" }}
         - name: VAULT_ADDR
           value: "{{ $.Values.global.vault.address }}"
         - name: VAULT_SECRET_ENGINE
@@ -135,6 +142,7 @@ spec:
           value: "{{ $.Values.global.vault.role }}"
         - name: VAULT_TYPE
           value: "{{ $.Values.global.vault.type }}"
+{{- end }}
         - name: TM_CLIENT_PORT
           value: "8888"
         - name: TM_TLS_ENABLED
@@ -142,7 +150,7 @@ spec:
         - name: CERT_SUBJECT
           value: "{{ $.Values.settings.certSubject }}"
         - name: EXTERNAL_URL
-          value: "{{ .Release.Name }}.{{ .Values.global.proxy.externalUrlSuffix }}"
+          value: "{{ include "quorum-tlscert-gen.name" . }}.{{ .Values.global.proxy.externalUrlSuffix }}"
         - name: COMPONENT_NS
           value: "{{ .Release.Namespace }}"
         command: ["sh", "-c"]
@@ -177,8 +185,10 @@ spec:
               # Generates the rootCA certificates
               openssl genrsa -out rootca.key 2048
               openssl req -x509 -new -nodes -key rootca.key -sha256 -days 1024 -out rootca.pem -subj "/${CERT_SUBJECT}"
+
               # Generates the openssl file for domain
               cd ${AMBASSADORTLS_PATH}
+
               echo "[req]
               req_extensions = v3_req
               distinguished_name = dn
@@ -189,7 +199,7 @@ spec:
               subjectAltName = @alt_names
               [alt_names]
               DNS.1 = ${EXTERNAL_URL}
-              DNS.2 = {{ include "besu-tlscert-gen.fullname" . }}.{{ .Release.Namespace }}
+              DNS.2 = {{ include "quorum-tlscert-gen.fullname" . }}.{{ .Release.Namespace }}
               DNS.3 = tessera-{{ .Release.Name }}.{{ .Release.Namespace }}
               " > openssl.conf
               # Generates the ambassador tls certificates
@@ -202,16 +212,18 @@ spec:
               # Check if TM_TLS_ENABLED is true
               if [ "$TM_TLS_ENABLED" == "true"  ]
               then
-                # Generate crypto for besu nodes and knownserver file
-                openssl genrsa -out besu-node.key 2048
-                openssl req -new -key besu-node.key -out besu-node.csr -subj "/CN=${EXTERNAL_URL}"
-                openssl x509 -req -in besu-node.csr -CA ${ROOTCA_PATH}/rootca.pem -CAkey ${ROOTCA_PATH}/rootca.key -CAcreateserial -out besu-node.pem -days 500 -sha256
-                cat besu-node.key besu-node.pem > besu_certificates.pem
-                openssl pkcs12 -export -in besu_certificates.pem -out besu-node.pkcs12 -password pass:changeme -name myAlias -noiter -nomaciter
-                echo "changeme" > besu-password
-                openssl x509 -in certchain.pem -noout -fingerprint -sha256 > besu-certchain-sha256
-                export DIGEST=$(awk '{print $2}' besu-certchain-sha256 | sed -n 's/Fingerprint=\(.*\)/\1/p')
-                printf '%s\n' "tessera-*.${COMPONENT_NS}:${TM_CLIENT_PORT} $DIGEST" "${EXTERNAL_URL} $DIGEST" > besu-knownServer
+                # Generate crypto for quorum nodes and knownserver file
+                openssl genrsa -out quorum-node.key 2048
+                openssl req -new -key quorum-node.key -out quorum-node.csr -subj "/CN=${EXTERNAL_URL}"
+                openssl x509 -req -in quorum-node.csr -CA ${ROOTCA_PATH}/rootca.pem -CAkey ${ROOTCA_PATH}/rootca.key -CAcreateserial -out quorum-node.pem -days 500 -sha256
+                cat quorum-node.key quorum-node.pem > quorum_certificates.pem
+
+                openssl pkcs12 -export -in quorum_certificates.pem -out quorum-node.pkcs12 -password pass:changeme -name myAlias -noiter -nomaciter
+                echo "changeme" > quorum-password
+
+                openssl x509 -in certchain.pem -noout -fingerprint -sha256 > quorum-certchain-sha256
+                export DIGEST=$(awk '{print $2}' quorum-certchain-sha256 | sed -n 's/Fingerprint=\(.*\)/\1/p')
+                printf '%s\n' "tessera-*.${COMPONENT_NS}:${TM_CLIENT_PORT} $DIGEST" "${EXTERNAL_URL} $DIGEST" > quorum-knownServer
               fi;
             fi;
             # Create necessary subdirectories for certificate storage
@@ -249,19 +261,19 @@ spec:
               if [ "$TM_TLS_ENABLED" == "true" ]
               then
                 # Encode additional certificate files when tmTls is true
-                base64 ${AMBASSADORTLS_PATH}/besu-node.pkcs12 > ${AMBASSADORTLS_PATH}/encode_besu-node.pkcs12
-                base64 ${AMBASSADORTLS_PATH}/besu-password > ${AMBASSADORTLS_PATH}/encode_besu-password
-                base64 ${AMBASSADORTLS_PATH}/besu-knownServer > ${AMBASSADORTLS_PATH}/encode_besu-knownServer
+                base64 ${AMBASSADORTLS_PATH}/quorum-node.pkcs12 > ${AMBASSADORTLS_PATH}/encode_quorum-node.pkcs12
+                base64 ${AMBASSADORTLS_PATH}/quorum-password > ${AMBASSADORTLS_PATH}/encode_quorum-password
+                base64 ${AMBASSADORTLS_PATH}/quorum-knownServer > ${AMBASSADORTLS_PATH}/encode_quorum-knownServer
                 
                 # Format the additional certificate files for saving in the vault
-                formatCertificate "${AMBASSADORTLS_PATH}/encode_besu-node.pkcs12" "${FORMAT_CERTIFICATE_PATH}/ambassadortls"
-                formatCertificate "${AMBASSADORTLS_PATH}/encode_besu-password" "${FORMAT_CERTIFICATE_PATH}/ambassadortls"
-                formatCertificate "${AMBASSADORTLS_PATH}/encode_besu-knownServer" "${FORMAT_CERTIFICATE_PATH}/ambassadortls"
+                formatCertificate "${AMBASSADORTLS_PATH}/encode_quorum-node.pkcs12" "${FORMAT_CERTIFICATE_PATH}/ambassadortls"
+                formatCertificate "${AMBASSADORTLS_PATH}/encode_quorum-password" "${FORMAT_CERTIFICATE_PATH}/ambassadortls"
+                formatCertificate "${AMBASSADORTLS_PATH}/encode_quorum-knownServer" "${FORMAT_CERTIFICATE_PATH}/ambassadortls"
 
                 # Read the additional formatted certificate files
-                KEYSTORE_FORMAT=$(cat ${FORMAT_CERTIFICATE_PATH}/ambassadortls/encode_besu-node.pkcs12.txt)
-                PASSWORD_FORMAT=$(cat ${FORMAT_CERTIFICATE_PATH}/ambassadortls/encode_besu-password.txt)
-                KNOWNSERVER_FORMAT=$(cat ${FORMAT_CERTIFICATE_PATH}/ambassadortls/encode_besu-knownServer.txt)
+                KEYSTORE_FORMAT=$(cat ${FORMAT_CERTIFICATE_PATH}/ambassadortls/encode_quorum-node.pkcs12.txt)
+                PASSWORD_FORMAT=$(cat ${FORMAT_CERTIFICATE_PATH}/ambassadortls/encode_quorum-password.txt)
+                KNOWNSERVER_FORMAT=$(cat ${FORMAT_CERTIFICATE_PATH}/ambassadortls/encode_quorum-knownServer.txt)
                 
                 # Create a JSON file with the data to be saved in the vault when tmTls is true
                 echo "
@@ -312,7 +324,7 @@ spec:
                 # Check if any of the certificate and key fields are missing, empty or having any kind of error
                 for field in "$CA_PEM" "$CA_KEY" "$AMBASSADORCRT" "$AMBASSADORKEY" "$KEYSTORE" "$PASSWORD" "$KNOWNSERVER"
                 do
-                  if [ "$field" = "null" ] || [[ "$field" = *"error"* ]] || [ "$field" = "" ]; then
+                  if [ "$field" == "null" ] || [[ "$field" = *"error"* ]] || [ "$field" = "" ]; then
                     AMBASSADORTLS_CERT_WRITTEN=false
                     break
                   else
@@ -332,7 +344,7 @@ spec:
                 # Check if any of the certificate and key fields are missing, empty or having any kind of error
                 for field in "$CA_PEM" "$CA_KEY" "$AMBASSADORCRT" "$AMBASSADORKEY"
                 do
-                  if [ "$field" = "null" ] || [[ "$field" = *"error"* ]] || [ "$field" = "" ]; then
+                  if [ "$field" == "null" ] || [[ "$field" = *"error"* ]] || [ "$field" = "" ]; then
                     AMBASSADORTLS_CERT_WRITTEN=false
                     break
                   else
@@ -344,16 +356,20 @@ spec:
               # Delete the same JSON file that we created to perform the write operation in the vault
               rm payload.json
             fi;
+
             # Create tls secret with the certificates
-            kubectl get configmap --namespace {{ .Release.Namespace }} {{ include "besu-tlscert-gen.name" . }}-tls-certs
-            if [ $? -ne 0 ]; then
-              kubectl create secret tls --namespace {{ .Release.Namespace }} {{ include "besu-tlscert-gen.name" . }}-tls-certs \
+            if ! kubectl get secret tls --namespace {{ .Release.Namespace }} {{ include "quorum-tlscert-gen.name" . }}-tls-certs &>/dev/null; then
+              kubectl create secret tls --namespace {{ .Release.Namespace }} {{ include "quorum-tlscert-gen.name" . }}-tls-certs \
               --cert=${AMBASSADORTLS_PATH}/certchain.pem \
               --key=${AMBASSADORTLS_PATH}/node.key
             fi
+
+            echo "COMPLETED"
         volumeMounts:
           - name: certificates
             mountPath: /certificates
+{{- if eq .Values.global.vault.type "hashicorp" }}
           - name: scripts-volume
             mountPath: /scripts/bevel-vault.sh
             subPath: bevel-vault.sh
+{{- end }}
